<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_presentacion"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_Home" />
    </group>
    <item
        android:enabled="false"
        android:title="Transacciones" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Garita"
            android:icon="@drawable/ic_account_box"
            android:title="@string/menu_Garita" />
        <item
            android:id="@+id/nav_CercoElectrico"
            android:icon="@drawable/ic_lock"
            android:title="@string/menu_CercoElectrico" />
        <item
            android:id="@+id/nav_Fomites"
            android:icon="@drawable/ic_paw_print_24"
            android:title="@string/menu_Fomites" />
    </group>
    <item
        android:enabled="false"
        android:title="Reportes" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ReporteGarita"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_RepGarita" />
        <item
            android:id="@+id/nav_ReporteCerco"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_RepCercoElectrico" />
        <item
            android:id="@+id/nav_ReporteFomites"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_RepFomites" />
    </group>
    <item
        android:enabled="false"
        android:title="Base de Datos" />
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ImportarDB"
            android:icon="@drawable/ic_cloud_download_24"
            android:title="@string/menu_Importacion" />
        <item
            android:id="@+id/nav_ExportarDB"
            android:icon="@drawable/ic_cloud_upload_24"
            android:title="@string/menu_Exportacion" />
    </group>
</menu>
