<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <View android:id="@+id/topView" android:background="@color/azulino" android:layout_width="0.0dp" android:layout_height="120.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <View android:id="@+id/view5" android:background="@drawable/wave" android:layout_width="0.0dp" android:layout_height="60.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/topView" />
    <ImageView android:id="@+id/imageView5" android:layout_width="72dp" android:layout_height="72dp" android:layout_marginTop="32.0dp" android:contentDescription="@string/top_icon" android:layout_marginEnd="16.0dp" android:scaleType="fitCenter" android:src="@drawable/logito2" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="30.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/topText" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="30.0dp" android:text="Bioseguridad" android:layout_marginStart="32.0dp" app:layout_constraintEnd_toStartOf="@id/imageView5" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/topView" app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout android:orientation="vertical" android:id="@+id/llUsuario" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/view5">
        <com.google.android.material.textfield.TextInputLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="0.0dp" android:hint="Usuario" android:textAlignment="textStart" android:layout_marginStart="30.0dp" android:layout_marginEnd="30.0dp" app:counterEnabled="true" app:counterMaxLength="10" app:endIconMode="clear_text" app:helperTextTextColor="#ff0001" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText android:textSize="20.0sp" android:id="@+id/et_usuario" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLength="10" android:inputType="textCapCharacters" android:drawableStart="@drawable/ic_user_24" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/llPassword" android:layout_width="match_parent" android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/llUsuario">
        <com.google.android.material.textfield.TextInputLayout android:id="@+id/etdni" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:hint="Contraseña" android:textAlignment="textStart" android:layout_marginStart="30.0dp" android:layout_marginEnd="30.0dp" app:counterEnabled="true" app:counterMaxLength="10" app:endIconMode="password_toggle" app:helperTextTextColor="#ff0001" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText android:textSize="20.0sp" android:id="@+id/et_password" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLength="10" android:inputType="textPassword" android:drawableStart="@drawable/ic_lock" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <Button android:textSize="18.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/btnLogin" android:background="@drawable/round_bg_login" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:text="@string/login" android:layout_marginStart="32.0dp" android:layout_marginEnd="32.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/llPassword" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/azulino" android:id="@+id/tvRegistrate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:text="@string/nuevodispositivo" android:layout_marginStart="32.0dp" android:layout_marginEnd="32.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/btnLogin" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/azulino" android:id="@+id/tvIdandroid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dp" android:text="@string/idandrodid" android:layout_marginStart="32.0dp" android:layout_marginEnd="32.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tvRegistrate" />
    <TextView android:id="@+id/tvVersion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16.0dp" android:text="@string/sVersion" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
